[package]
name = "bevyv_cas"
version = "0.0.1"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache License 2.0"
edition = "2021"
repository = "https://github.com/valaphee/bevyv"
description = "File-based content-addressed storage for Bevy."

[dependencies]
anyhow = "1.0"
bevy = { version = "0.9", default-features = false, features = ["bevy_asset"] }
futures-lite = "1.12"
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"

[dev-dependencies]
bevy = { version = "0.9", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_winit",
    "jpeg",
    "x11"
] }
bevyv_obj = { path = "../bevyv_obj" }
