[package]
name = "bevyv_mcbe"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "bevy_render"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", git = "https://github.com/valaphee/serde_json.git" }
