[package]
name = "vixen_prometheus"
version = "0.0.1"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/vixen.git"
description = "Bevy Prometheus"

[dependencies]
anyhow = "1.0"
bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "bevy_render"] }
bytemuck = { version = "1.13.0", features = ["derive"] }
csv = "1.1.6"
hex = { version = "0.4.3", features = ["serde"] }
prometheus = { path = "../prometheus" }
thiserror = "1.0"

[dev-dependencies]
bevy = { version = "0.9", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_winit",
    "jpeg",
    "x11"
] }
