[package]
name = "vixen_steamaudio"
version = "0.0.1"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/vixen.git"
description = "Steam Audio integration for Bevy."

[dependencies]
anyhow = "1.0"
bevy = { version = "0.9", default-features = false, features = ["bevy_asset"] }
rodio = { version = "0.16", default-features = false, features = ["mp3"] }
vixen_steamaudio_sys = { path = "../vixen_steamaudio_sys" }
