[package]
name = "bevyv_obj"
version = "0.0.1"
edition = "2021"
description = "Wavefront OBJ support for Bevy."

[dependencies]
anyhow = "1.0"
bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "bevy_render"] }
thiserror = "1.0"

[dev-dependencies]
bevy = { version = "0.9", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_winit",
    "png",
    "jpeg",
    "wayland",
    "x11"
] }
